# phact-reproducibility

./: .gitignore  LICENSE-DATA  Makefile  NOTICE  PROVENANCE.md  README.md  demo.py  pyproject.toml  regenerate_tables.py
calibration/: test_calibration.py
phact_physics/: __init__.py  agent.py  physics_engine.py
phact_physics/contracts/: __init__.py  astrophysics_contract.py  dna_contract.py  drug_formulation_contract.py  electrical_contract.py  engine.py
phact_physics/domains/: __init__.py  astrophysics.py  drug_formulation.py  electrical.py  nrt.py
results/: ablation_20260618_121321.json  ablation_dna_20260618_120014.json  ablation_elec_20260618_115514.json  rev3_E0_feasible_gemini.json  rev3_E0_feasible_llama70b.json  rev3_E0_impossible_gemini.json  rev3_E0_impossible_llama70b.json  rev3_E1_impossible_gemini.json  rev3_E1_impossible_llama70b.json  rev3_E1_impossible_llama8b.json  rev3_E2_impossible_gemini.json  rev3_E2_impossible_llama70b.json  rev3_Pf_feasible_gemini.json  rev3_Pf_feasible_llama70b.json  rev3_SCM_S1_bare_t0_gemini.json  rev3_SCM_S2_bare_t1_gemini.json  rev3_SCM_S3_scmexcl_t1_gemini.json  rev3_SCM_S4a_bare_latch_gemini.json  rev3_SCM_S4b_scmavail_latch_gemini.json  rev3_SCM_S4c_scmexcl_latch_gemini.json  rev4_baseline_A.json  rev4_baseline_B.json
tests/: test_adversarial_impossible.py
