[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phact-physics"
version = "1.0.0"
description = "Deterministic physics engines and reproducibility scripts for the Physics-Anchored Certification (PHACT) paper"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"

keywords = [
    "reproducibility", "physics", "scientific-computing",
    "dependency-graph", "DLVO", "SantaLucia", "gravitational-waves",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# The engines and reproducibility scripts use ONLY the Python standard library.
# There are no runtime dependencies. This is deliberate: the scientific core
# of the paper must run anywhere, forever, with no version drift.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["phact_physics*"]

[project.urls]
Paper = "https://www.nature.com/natmachintell/"
